[project]
name = "whatever-eat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "google-maps-places>=0.2.1",
    "ipython>=8.37.0",
    "langchain-tavily>=0.2.1",
    "langchain[openai]>=0.3.25",
    "langgraph>=0.4.8",
    "line-bot-sdk>=3.17.1",
    "python-dotenv>=1.1.0",
]
